--- a/app/brandpage.html
+++ b/app/brandpage.html
@@ -21,13 +21,15 @@
       <a class="header-logo" href="#">
         <img src="images/dist/logo.png" alt="logo">
       </a>
-      <a href="#" class="btn-sign bg-orange text-white fz-16 text-uppercase radius-4 d-none d-lg-flex flex-column align-items-center">
-        <b class="weight-700">don’t have a store?</b>
-        <span>sign up here.</span>
-      </a>
-      <div class="text-uppercase fz-16 d-none d-lg-flex flex-column align-items-end">
-        <span class="weight-500">have a MindshareCommerce store?</span>
-        <a href="#" class="text-orange ">Login here to add products<span class="text-black">.</span></a>
+      <div class="d-none d-lg-flex align-items-center">
+        <a href="#" class="header-sign btn-sign bg-orange text-white fz-16 text-uppercase radius-4 d-none d-lg-flex flex-column align-items-center">
+          <b class="weight-700">don’t have a store?</b>
+          <span>sign up here.</span>
+        </a>
+        <div class="text-uppercase fz-16 d-none d-lg-flex flex-column align-items-end">
+          <span class="weight-500">have a MindshareCommerce store?</span>
+          <a href="#" class="text-orange ">Login here to add products<span class="text-black">.</span></a>
+        </div>
       </div>
       <button class="header-btn d-flex flex-column d-lg-none">
         <span class="bg-blue"></span>
@@ -121,7 +123,21 @@
         <p class="fz-16">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus vitae tincidunt vitae blandit enim. Aliquet vitae mi, nunc, augue vulputate enim blandit. Dolor etiam tincidunt sit tincidunt vitae. Faucibus accumsan quis consectetur morbi. Neque, vitae enim pharetra aliquet neque sagittis amet, proin.
         </p>
-        <a href="#" class="promo-block__btn text-white bg-orange text-uppercase weight-500 fz-14 radius-4">ADD THIS BRAND TO YOUR STORE</a>
+        <a href="#" class="promo-block__btn text-white bg-orange text-uppercase weight-500 fz-14 radius-4">
+          <span>ADD THIS BRAND TO YOUR STORE</span>
+        </a>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <div class="reviews-desktop d-none d-sm-flex flex-column">
+          <img src="images/dist/review-desktop.png" alt="">
+          <img src="images/dist/review-desktop.png" alt="">
+        </div>
+        <div class="reviews-mobile d-flex d-sm-none flex-column">
+          <img src="images/dist/review-slider.png" alt="">
+          <img src="images/dist/review-write.png" alt="">
+        </div>
       </div>
     </section>
   </main>
