--- a/app/index.html
+++ b/app/index.html
@@ -21,13 +21,15 @@
 				<a class="header-logo" href="#">
 					<img src="images/dist/logo.png" alt="logo">
 				</a>
-				<a href="#" class="btn-sign bg-orange text-white fz-16 text-uppercase radius-4 d-none d-lg-flex flex-column align-items-center">
-					<b class="weight-700">don’t have a store?</b>
-					<span>sign up here.</span>
-				</a>
-				<div class="text-uppercase fz-16 d-none d-lg-flex flex-column align-items-end">
-					<span class="weight-500">have a MindshareCommerce store?</span>
-					<a href="#" class="text-orange ">Login here to add products<span class="text-black">.</span></a>
+				<div class="d-none d-lg-flex align-items-center">
+					<a href="#" class="header-sign btn-sign bg-orange text-white fz-16 text-uppercase radius-4 d-none d-lg-flex flex-column align-items-center">
+						<b class="weight-700">don’t have a store?</b>
+						<span>sign up here.</span>
+					</a>
+					<div class="text-uppercase fz-16 d-none d-lg-flex flex-column align-items-end">
+						<span class="weight-500">have a MindshareCommerce store?</span>
+						<a href="#" class="text-orange ">Login here to add products<span class="text-black">.</span></a>
+					</div>
 				</div>
 				<button class="header-btn d-flex flex-column d-lg-none">
 					<span class="bg-blue"></span>
