--- a/app/index.html
+++ b/app/index.html
@@ -98,16 +98,20 @@
 				<div class="container">
 					<ul class="main-slider radius-4">
 						<li>
-							<img src="images/dist/main-slider/slide1.jpg" alt="">
+							<img class="d-none d-420-block" src="images/dist/main-slider/slide1.jpg" alt="">
+							<img class="d-block d-420-none" src="images/dist/main-slider/slide1-mobile.jpg" alt="">
 						</li>
 						<li>
-							<img src="images/dist/main-slider/slide1.jpg" alt="">
+							<img class="d-none d-420-block" src="images/dist/main-slider/slide1.jpg" alt="">
+							<img class="d-block d-420-none" src="images/dist/main-slider/slide1-mobile.jpg" alt="">
 						</li>
 						<li>
-							<img src="images/dist/main-slider/slide1.jpg" alt="">
+							<img class="d-none d-420-block" src="images/dist/main-slider/slide1.jpg" alt="">
+							<img class="d-block d-420-none" src="images/dist/main-slider/slide1-mobile.jpg" alt="">
 						</li>
 						<li>
-							<img src="images/dist/main-slider/slide1.jpg" alt="">
+							<img class="d-none d-420-block" src="images/dist/main-slider/slide1.jpg" alt="">
+							<img class="d-block d-420-none" src="images/dist/main-slider/slide1-mobile.jpg" alt="">
 						</li>
 					</ul>
 				</div>
@@ -117,17 +121,22 @@
 					<ul class="products-slider only-desktop flex-wrap d-flex d-lg-block">
 						<li>
 							<a href="#">
-								<img src="images/dist/products-slider/product2.jpg" alt="">
-							</a>
-						</li>
-						<li>
-							<a href="#">
 								<img src="images/dist/products-slider/product1.jpg" alt="">
 							</a>
 						</li>
 						<li>
 							<a href="#">
 								<img src="images/dist/products-slider/product2.jpg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="images/dist/products-slider/product3.jpg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="images/dist/products-slider/product4.jpg" alt="">
 							</a>
 						</li>
 						<li>
