added new page and fixed slider

--- a/app/brandpage-vendors.html
+++ b/app/brandpage-vendors.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="images/favicon.png">
-    <title>Brandpage for supplement brands with lots of content</title>
+    <title>Brandpage for vendors that aren't supplement companies</title>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/app.min.css">
@@ -56,41 +56,8 @@
         </div>
       </div>
     </section>
-    <section class="products">
-      <div class="container">
-        <b class="products-title title text-blue weight-500 fz-44">Our Bestsellers</b>
-        <ul class="products-slider alt desktop-mobile flex-wrap d-flex d-lg-block">
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets1.jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets2.jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets3.jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets4.jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets3.jpg" alt="">
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
     <section class="info bg-lightblue">
       <div class="container">
-        <b class="info-title title text-blue fz-44 weight-500 text-center">Statement of Quality</b>
         <ul class="info-cards d-flex flex-wrap">
           <li class="bg-white radius-4 text-center">
             <img src="images/dist/icons/icon_medicine.svg" alt="">
@@ -126,18 +93,6 @@
         <a href="#" class="promo-block__btn text-white bg-orange text-uppercase weight-500 fz-14 radius-4">
           <span>ADD THIS BRAND TO YOUR STORE</span>
         </a>
-      </div>
-    </section>
-    <section class="reviews">
-      <div class="container">
-        <div class="reviews-desktop d-none d-sm-flex flex-column">
-          <img src="images/dist/review-desktop.png" alt="">
-          <img src="images/dist/review-desktop.png" alt="">
-        </div>
-        <div class="reviews-mobile d-flex d-sm-none flex-column">
-          <img src="images/dist/review-slider.png" alt="">
-          <img src="images/dist/review-write.png" alt="">
-        </div>
       </div>
     </section>
   </main>
