--- a/app/brandpage-little.html
+++ b/app/brandpage-little.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="images/favicon.png">
-    <title>Brandpage for supplement brands with lots of content</title>
+    <title>Brandpage for supplement brands with little content</title>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/app.min.css">
@@ -56,67 +56,6 @@
         </div>
       </div>
     </section>
-    <section class="products">
-      <div class="container">
-        <b class="products-title title text-blue weight-500 fz-44">Our Bestsellers</b>
-        <ul class="products-slider alt desktop-mobile flex-wrap d-flex d-lg-block">
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets1.jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets2.jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets3.jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets4.jpg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="images/dist/products-slider/tablets3.jpg" alt="">
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="info bg-lightblue">
-      <div class="container">
-        <b class="info-title title text-blue fz-44 weight-500 text-center">Statement of Quality</b>
-        <ul class="info-cards d-flex flex-wrap">
-          <li class="bg-white radius-4 text-center">
-            <img src="images/dist/icons/icon_medicine.svg" alt="">
-            <b class="weight-700 fz-20">Ut tincidunt risus ut quisque</b>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis sed pretium, commodo, etiam imperdiet tempus. Diam at in lobortis lobortis maecenas sodales. Imperdiet commodo.
-            </p>
-          </li>
-          <li class="bg-white radius-4 text-center">
-            <img src="images/dist/icons/icon_person.svg" alt="">
-            <b class="weight-700 fz-20">Risus blandit aenean </b>
-            <p>
-              Dolor sit amet, consectetur adipiscing elit. In nulla quam consequat convallis eleifend ullamcorper tellus. Cras turpis nec, malesuada amet turpis. Id tempor urna vitae ridiculus. Dictum et pulvinar volutpat quis arcu.
-            </p>
-          </li>
-          <li class="bg-white radius-4 text-center">
-            <img src="images/dist/icons/icon_box-rating.svg" alt="">
-            <b class="weight-700 fz-20">Lacinia ac nullam quam </b>
-            <p>
-              Sed gravida odio mus fermentum, integer suscipit egestas quam volutpat. Orci mattis arcu cras vestibulum, diam suspendisse. Lectus consequat neque auctor vestibulum et.
-            </p>
-          </li>
-        </ul>
-        <iframe src="https://www.youtube.com/embed/pHsPhoEJTPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-    </section>
     <section class="promo-block">
       <div class="container text-center d-flex flex-column">
         <b class="promo-block__title title text-blue weight-500 fz-44 text-center d-block">Dolor sit amet, consecte tur adipiscing </b>
@@ -126,18 +65,6 @@
         <a href="#" class="promo-block__btn text-white bg-orange text-uppercase weight-500 fz-14 radius-4">
           <span>ADD THIS BRAND TO YOUR STORE</span>
         </a>
-      </div>
-    </section>
-    <section class="reviews">
-      <div class="container">
-        <div class="reviews-desktop d-none d-sm-flex flex-column">
-          <img src="images/dist/review-desktop.png" alt="">
-          <img src="images/dist/review-desktop.png" alt="">
-        </div>
-        <div class="reviews-mobile d-flex d-sm-none flex-column">
-          <img src="images/dist/review-slider.png" alt="">
-          <img src="images/dist/review-write.png" alt="">
-        </div>
       </div>
     </section>
   </main>
